# tgQuizBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
tgQuizBot/: bot.py  bot_instance.py  config.py  main.py  quiz.db  test.py
tgQuizBot/db/: database.py  quiz.db
tgQuizBot/handlers/: command_handlers.py  message_handlers.py  quiz.db
tgQuizBot/util/: auth.py  reminders.py  utils.py
